# Verteiler-Beschriften

./: LICENSE  MakeAppImage.sh  README.md  pyproject.toml  requirements.txt
Ergebnisse der Software/: Kunde_Mustermann_Anlage_1_Zeitstempel.ods  Kunde_Mustermann_Zeitstempel.json  Kunde_Mustermann_Zeitstempel.odt
src/: alert.py  android_handler.py  constants.py  data_manager.py  date_utils.py  main.py  odf_exporter.py  ods_exporter.py  ods_manual.py  odt_manual.py  pyproject.toml  requirements.txt  translator.py  ui_builder.py  validators.py
src/assets/locales/: main_de_DE.json  main_en_US.json  ui_builder_de_DE.json  ui_builder_en_US.json
