[project]
name = "Verteiler Beschriften"
version = "2.5.0"
description = "Anlagen Eingabe und Verteiler-Beschriftung"
requires-python = ">=3.8"
license-files = [
    "LICENSE",
]
dependencies = [
    "flet>=0.24.0",
]

[project.optional-dependencies]
desktop = [
    "odfpy",  # ODS/ODT Export für Desktop
]

[tool.flet]
name = "Verteiler_beschriften"
description = "Anlagen Eingabe und Verteiler-Beschriftung"
version = "2.3.4"

[tool.flet.app]
path = "src"
icon = "assets/logo.png"
assets = ["assets"]

[tool.flet.android]
# Keine zusätzlichen Packages für Android - nutzt manuelle ODS-Erstellung

permissions = [
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
]
