[project]
description = "Verteiler verwalten und beschriften"
authors = [
    {name = "Volker Heggemann", email = "vohegg@gmail.com"}
]
requires-python = ">=3.8"
license-files = [
    "LICENSE",
]
dependencies = [
    "flet>=0.80.0",
    "Pillow>=10.4.0",
]

[project.optional-dependencies]
desktop = [
    # Keine zusätzlichen Desktop-Dependencies - nutzt manuelle ODS-Erstellung
]

[tool.flet]
name = "Verteiler_Beschriften"
description = "Verteiler verwalten und beschriften"
version = "3.1.0"

[tool.flet.app]
path = "src"
icon = "assets/logo.png"
assets = ["assets"]

[tool.flet.android]
packages = [
    "Pillow",
]
permissions = [
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.MANAGE_EXTERNAL_STORAGE",
]
